# xulanin

./: README.md  next.config.ts  package-lock.json  package.json
api/: Dockerfile  fly.toml  pyproject.toml
api/src/xubie_api/: main.py
api/src/xubie_api/routes/: contact.py  health.py  menu.py  orders.py
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/api/contact/: route.ts
app/api/order/: route.ts
app/cart/: page.tsx
app/checkout/: page.tsx
app/faq/: page.tsx
app/inquiry/: page.tsx
app/licensing/: page.tsx
app/menu/: page.tsx
app/order-confirmation/[orderId]/: page.tsx
app/shop/: page.tsx
components/: about-section.tsx  cart-sidebar.tsx  catering-section.tsx  contact-section.tsx  faq-section.tsx  food-label.tsx  footer.tsx  hero-section.tsx  how-it-works.tsx  icons.tsx  instagram-section.tsx  marquee-banner.tsx  menu-preview.tsx  navigation.tsx  products-grid.tsx  products-section.tsx  stats-section.tsx  story-section.tsx  testimonials-section.tsx  tiktok-section.tsx  xulanin-chatbot.tsx
lib/: cart-context.tsx  cart-provider.tsx  cart.ts  data.ts  delivery.ts  products.ts
xubie-snacks/: proxy.ts
xubie-snacks/app/: globals.css
xubie-snacks/app/admin/(dashboard)/: layout.tsx  page.tsx
xubie-snacks/app/admin/login/: page.tsx
xubie-snacks/app/api/contact/: route.ts
xubie-snacks/app/api/order/: route.ts
xubie-snacks/app/menu/: page.tsx
xubie-snacks/components/: hero-section.tsx  menu-preview.tsx
xubie-snacks/data/: messages.json  orders.json
xubie-snacks/lib/: admin-auth.ts  data.ts  store.ts
(+10 files in other folders)
