[project]
name = "xubie-api"
version = "0.1.0"
description = "Xubie Snacks API — orders, menu, contact, and Xuliani agent backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "pydantic>=2.10",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
